Ajout et fin des test d'integrations. taux de couverture 83%

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,8 @@
                     <excludes>
                         <exclude>**/model/*.class</exclude>
                         <exclude>**/dto/*.class</exclude>
+                        <exclude>com/example/safetynet/service/JsonReaderImpl.java.class</exclude>
+                        <exclude>com/example/safetynet/service/JsonReader.java.class</exclude>
                     </excludes>
                 </configuration>
                 <executions>
